welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: not found: value x
var T = new Array[Color](x)
                         ^Array1:4: error: not found: value x
x==getMondeHauteur()
^